# middleware-wrapper-atrust

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
azure-pipelines/: middleware-wrapper-atrust.yaml
azure-pipelines/templates/: install-rust.yaml
src/: capi.rs  client.rs  config.rs  helpers.rs  idesscd.rs  lib.rs  logging.rs  return_codes.rs
src/atrustapi/: asigntse.rs  config.rs  mod.rs  return_codes.rs  seapi.rs
src/capi/: asigntse.rs  config.rs  seapi.rs
src/config/: asigntseonline.conf
src/helpers/: fakers.rs  ffi.rs  mod.rs
tests/: asigntseonline.conf  helpers.rs  integration_tests.rs
tests/middleware-wrapper-atrust-dotnet-test/: .gitignore  Program.cs  README.md  middleware-wrapper-atrust-dotnet-test.csproj
tests/middleware-wrapper-atrust-dotnet-test/Interop/: ATrustConstants.cs  ATrustResult.cs  NativeMethods.cs
