[package]
name = "middleware-wrapper-atrust"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
uuid = { version = "0.8.2", features = [ "serde" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
base64 = "0.13.0"
libc = "0.2.99"
tini = "1.2.0"

[lib]
name = "asigntse"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "fiskaltrust a.sign TSE wrapper"
ProductName = "fiskaltrust a.sign TSE wrapper "
OriginalFilename = "asigntse.dll"
LegalCopyright = "Copyright © 2021 fiskaltrust consulting gmbh"
CompanyName = "fiskaltrust consulting gmbh"
