[package]
name = "middleware-wrapper-atrust"
version = "0.1.0"
edition = "2018"

[features]
default = [ "not_implemented" ]

mocks = [ "fake", "rand" ]
not_implemented = []

[dependencies]
thiserror = "1.0"
log = "0.4"
once_cell = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
serde_repr = "0.1"
uuid = { version = "0.8.2", features = [ "serde", "v5" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
base64 = "0.13.0"
libc = "0.2.99"
tini = "1.2.0"
num_enum = "0.5.3"
flexi_logger = "0.18.0"
fake = { version = "2.4", optional = true, features=[ "derive", "chrono" ] }
rand = { version = "0.8.4", optional = true }
sha256 = "1.0.2"
arc-swap = "1.3.0"
hex = "0.4.3"
restcrab = "0.1"

[dev-dependencies]
test-cdylib = "1.1"
dlopen = "0.1"
serial_test = "0.5.1"
wiremock = "0.5.6"
async-std = "1.9.0"

[build-dependencies]
winres = "0.1"

[lib]
name = "middleware_wrapper_atrust"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[package.metadata.winres]
FileDescription = "fiskaltrust a.sign TSE wrapper"
ProductName = "fiskaltrust a.sign TSE wrapper "
OriginalFilename = "asigntse.dll"
LegalCopyright = "Copyright © 2021 fiskaltrust consulting gmbh"
CompanyName = "fiskaltrust consulting gmbh"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
required-features = [ "mocks" ]
